Fix studytrack-selector overflowing

--- a/services/frontend/src/components/StudyProgramme/studyprogramme.css
+++ b/services/frontend/src/components/StudyProgramme/studyprogramme.css
@@ -11,7 +11,6 @@
   font-weight: bold;
 }
 
-.studytrack-overview .divider,
 .studyprogramme-overview .divider {
   margin-top: 4em;
 }
